# gnothology

./: chart.py  pyproject.toml
